--- a/src/styles.css
+++ b/src/styles.css
@@ -18,3 +18,7 @@ body { margin: 0; font-family: Aileron, "Helvetica Neue", sans-serif; }
 
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+
+.ql-container {
+  height: 450px !important;
+}
