added submit button

--- a/src/app/write-news/write-news.component.html
+++ b/src/app/write-news/write-news.component.html
@@ -69,6 +69,12 @@
                     </form>
                 </mat-grid-tile>
 
+                <!-- Listed -->
+                <div class="custom-control custom-checkbox">
+                    <input type="checkbox" class="custom-control-input" id="listed">
+                    <label class="custom-control-label" for="listed">Listed</label>
+                </div><br><br>
+
                 <!-- Submit Buttons -->
                 <mat-grid-tile colspan="4">
                     <button mat-raised-button color="primary" id="submitNews" (click)="submitNews()"
