--- a/src/app/write-news/write-news.component.html
+++ b/src/app/write-news/write-news.component.html
@@ -69,14 +69,15 @@
                     </form>
                 </mat-grid-tile>
 
-                <!-- Listed -->
-                <div class="custom-control custom-checkbox">
-                    <input type="checkbox" class="custom-control-input" id="listed">
-                    <label class="custom-control-label" for="listed">Listed</label>
-                </div><br><br>
+
 
                 <!-- Submit Buttons -->
                 <mat-grid-tile colspan="4">
+                    <!-- Listed -->
+                    <div class="custom-control custom-checkbox" style="margin-right: 20px">
+                        <input type="checkbox" class="custom-control-input" id="listed">
+                        <label class="custom-control-label" for="listed">Listed</label>
+                    </div><br><br>
                     <button mat-raised-button color="primary" id="submitNews" (click)="submitNews()"
                         style="margin-right: 20px">SUBIR NOTICIA</button>
 
