deleted preview button

--- a/src/app/write-news/write-news.component.html
+++ b/src/app/write-news/write-news.component.html
@@ -73,15 +73,15 @@
 
                 <!-- Submit Buttons -->
                 <mat-grid-tile colspan="4">
-                    <!-- Listed -->
+                    <!-- Listed 
                     <div class="custom-control custom-checkbox" style="margin-right: 20px">
                         <input type="checkbox" class="custom-control-input" id="listed">
-                        <label class="custom-control-label" for="listed">Listed</label>
-                    </div><br><br>
+                        <label class="custom-control-label" for="listed">Mostrar en la página de noticias</label>
+                    </div><br><br>-->
                     <button mat-raised-button color="primary" id="submitNews" (click)="submitNews()"
                         style="margin-right: 20px">SUBIR NOTICIA</button>
 
-                    <button mat-stroked-button color="primary">VISTA PREVIA</button>
+
                 </mat-grid-tile>
             </mat-grid-list>
 
