--- a/src/app/team/team.component.html
+++ b/src/app/team/team.component.html
@@ -25,7 +25,7 @@
                 </mat-expansion-panel-header>
 
                 <app-team-card type="Mediacom"></app-team-card>
-
+                <app-team-card type="Mediacom2"></app-team-card>
             </mat-expansion-panel>
 
             <!-- I+D -->
@@ -61,7 +61,7 @@
                 </mat-expansion-panel-header>
 
                 <app-team-card type="Education"></app-team-card>
-
+                <app-team-card type="Education2"></app-team-card>
             </mat-expansion-panel>
             
 
