added emoji rating scale

--- a/src/app/noticia/noticia.component.css
+++ b/src/app/noticia/noticia.component.css
@@ -224,6 +224,12 @@ img {
     text-align: right;
     color: #ffffff;
 }
+.whitetext-left{
+    font-size: 20px;
+    font-weight: bold;
+    text-align: left;
+    color: #ffffff;
+}
 .whiteRoundedBlock{
     background-color: whitesmoke;
     padding: 3%;
