--- a/src/styles.css
+++ b/src/styles.css
@@ -2,6 +2,7 @@
 @import '~quill/dist/quill.core.css';
 @import '~quill/dist/quill.bubble.css';
 @import '~quill/dist/quill.snow.css';
+@import '~ngx-bar-rating/themes/br-stars-theme';
 @font-face {
   font-family: Montserrat;
   font-weight: normal;
