--- a/src/app/mainpage/mainpage.component.html
+++ b/src/app/mainpage/mainpage.component.html
@@ -17,11 +17,11 @@
   <div class="topbottomLine" id="home">
     <div class="container">
       <div class="row">
-        <div class="col-sm" fxLayoutAlign="center center" fxLayout="column">
+        <div class="col-sm" [fxFlex.gt-xs]="20" fxLayoutAlign="center center" fxLayout="column">
           <img src="https://i.ibb.co/kx22G8h/IEEE-Logo-Darkest.png" height="100vmin" alt="Logo ITBA-IEEE">
         </div>
         <div class="col-sm">
-          <h1 id="logotext">ITBA<br>IEEE Student Chapter</h1>
+          <h2 id="logotext">ITBA<br>IEEE Student Branch</h2>
         </div>
         <div class="col-sm">
           <div class="whiteRoundedBlock" id="mainTxt">{{ 'HOME.DESC' | translate }}</div>
