--- a/src/app/write-news/write-news.component.html
+++ b/src/app/write-news/write-news.component.html
@@ -28,7 +28,7 @@
 
             <mat-grid-list cols="4" rowHeight="4:1">
                 <!-- Title -->
-                <mat-grid-tile colspan="2">
+                <mat-grid-tile colspan="4">
                     <mat-form-field class="example-full-width" style="width:50vw">
                         <mat-label>Título</mat-label>
                         <input id="title" matInput>
@@ -59,6 +59,14 @@
                     </mat-form-field>
                 </mat-grid-tile>
 
+                <!-- Epigrafe -->
+                <mat-grid-tile colspan="2">
+                    <mat-form-field class="example-full-width" style="width:50vw">
+                        <mat-label>Epígrafe</mat-label>
+                        <input id="imageText" matInput>
+                    </mat-form-field>
+                </mat-grid-tile>
+
                 <!-- Body -->
                 <mat-grid-tile colspan="4" rowspan="9">
                     <form [formGroup]="editorForm">
@@ -73,11 +81,11 @@
 
                 <!-- Submit Buttons -->
                 <mat-grid-tile colspan="4">
-                    <!-- Listed 
+                    <!-- Listed -->
                     <div class="custom-control custom-checkbox" style="margin-right: 20px">
                         <input type="checkbox" class="custom-control-input" id="listed">
                         <label class="custom-control-label" for="listed">Mostrar en la página de noticias</label>
-                    </div><br><br>-->
+                    </div><br><br>
                     <button mat-raised-button color="primary" id="submitNews" (click)="submitNews()"
                         style="margin-right: 20px">SUBIR NOTICIA</button>
 
