--- a/src/app/curso-python/curso-python.component.html
+++ b/src/app/curso-python/curso-python.component.html
@@ -1,37 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Python Courses</title>
 </head>
 <header>
-    <!-- Icons on right -->
-    <div id="iconscontainer">
-        <table style="width:100%">
-            <tr id="icons">
-                <td>
-                    <a href="https://www.linkedin.com/company/ieee-itba" class="icon"><i class="fab fa-linkedin-in"></i></a>
-                </td>
-                <td>
-                    <a href="https://www.instagram.com/ieee.itba/" class="icon"><i class="fab fa-instagram"></i></a>
-                </td>
-                <td>
-                    <a (click)="useLanguage('es')" class="icon">es</a>
-                </td>
-                <td>
-                    <a (click)="useLanguage('en')" class="icon">en</a>
-                </td>
-            </tr>
-        </table>
-    </div>
+    <app-navbar-courses></app-navbar-courses>
 </header>
+
 <body>
 
-    <div id="titleBar">
-        <button [routerLink]="['/home']" class="transparentButton" mdbWavesEffect id="homebutton"><i class="fas fa-angle-left"></i>&nbsp;<div id="homeText">Home</div></button>
-        <h1>{{ 'PYTHONCOURSES.TITLE' | translate }}</h1>
+    <div class="topbottomLine" id="home" style="margin-bottom:2%">
+        <div class="container">
+            <div class="row">
+                <div class="col-sm">
+                    <h1 id="logotext">{{ 'PYTHONCOURSES.TITLE' | translate }}</h1>
+                </div>
+            </div>
+        </div>
     </div>
+
+
 
 
     <!-- Introductory text -->
@@ -48,10 +39,12 @@
                 <!--Title-->
                 <mdb-card-title>
                     <h4>
-                        <a href="https://colab.research.google.com/github/IEEESBITBA/Curso-Python/blob/master/Clase_1_Curso_Python.ipynb#scrollTo=4FLV1yxDh9Rh">{{ 'PYTHONCOURSES.CLASSES.TITLE' | translate }} 1 </a>
+                        <a
+                            href="https://colab.research.google.com/github/IEEESBITBA/Curso-Python/blob/master/Clase_1_Curso_Python.ipynb#scrollTo=4FLV1yxDh9Rh">{{ 'PYTHONCOURSES.CLASSES.TITLE' | translate }}
+                            1 </a>
                     </h4>
                 </mdb-card-title>
-    
+
                 <!--Text-->
                 <mdb-card-text>{{ 'PYTHONCOURSES.CLASSES.C1' | translate }}</mdb-card-text>
             </mdb-card-body>
@@ -62,9 +55,11 @@
             <mdb-card-body>
                 <!--Title-->
                 <mdb-card-title>
-                    <a href="https://colab.research.google.com/github/IEEESBITBA/Curso-Python/blob/master/Clase_2_Curso_Python.ipynb">{{ 'PYTHONCOURSES.CLASSES.TITLE' | translate }} 2 </a>
+                    <a
+                        href="https://colab.research.google.com/github/IEEESBITBA/Curso-Python/blob/master/Clase_2_Curso_Python.ipynb">{{ 'PYTHONCOURSES.CLASSES.TITLE' | translate }}
+                        2 </a>
                 </mdb-card-title>
-    
+
                 <!--Text-->
                 <mdb-card-text>{{ 'PYTHONCOURSES.CLASSES.C2' | translate }}</mdb-card-text>
             </mdb-card-body>
@@ -75,9 +70,11 @@
             <mdb-card-body>
                 <!--Title-->
                 <mdb-card-title>
-                    <a href="https://colab.research.google.com/github/IEEESBITBA/Curso-Python/blob/master/Clase_3_Curso_Python.ipynb">{{ 'PYTHONCOURSES.CLASSES.TITLE' | translate }} 3 </a>
+                    <a
+                        href="https://colab.research.google.com/github/IEEESBITBA/Curso-Python/blob/master/Clase_3_Curso_Python.ipynb">{{ 'PYTHONCOURSES.CLASSES.TITLE' | translate }}
+                        3 </a>
                 </mdb-card-title>
-    
+
                 <!--Text-->
                 <mdb-card-text>{{ 'PYTHONCOURSES.CLASSES.C3' | translate }}</mdb-card-text>
             </mdb-card-body>
@@ -88,9 +85,11 @@
             <mdb-card-body>
                 <!--Title-->
                 <mdb-card-title>
-                    <a href="https://colab.research.google.com/github/IEEESBITBA/Curso-Python/blob/master/Clase_4_Curso_Python.ipynb">{{ 'PYTHONCOURSES.CLASSES.TITLE' | translate }} 4 </a>
+                    <a
+                        href="https://colab.research.google.com/github/IEEESBITBA/Curso-Python/blob/master/Clase_4_Curso_Python.ipynb">{{ 'PYTHONCOURSES.CLASSES.TITLE' | translate }}
+                        4 </a>
                 </mdb-card-title>
-    
+
                 <!--Text-->
                 <mdb-card-text>{{ 'PYTHONCOURSES.CLASSES.C4' | translate }}</mdb-card-text>
             </mdb-card-body>
@@ -101,9 +100,11 @@
             <mdb-card-body>
                 <!--Title-->
                 <mdb-card-title>
-                    <a href="https://colab.research.google.com/github/IEEESBITBA/Curso-Python/blob/master/Trabajo_integrador.ipynb">{{ 'PYTHONCOURSES.CLASSES.INTEGRADOR-TITLE' | translate }}  </a>
+                    <a
+                        href="https://colab.research.google.com/github/IEEESBITBA/Curso-Python/blob/master/Trabajo_integrador.ipynb">{{ 'PYTHONCOURSES.CLASSES.INTEGRADOR-TITLE' | translate }}
+                    </a>
                 </mdb-card-title>
-    
+
                 <!--Text-->
                 <mdb-card-text>{{ 'PYTHONCOURSES.CLASSES.INTEGRADOR' | translate }}</mdb-card-text>
             </mdb-card-body>
@@ -120,23 +121,29 @@
                 <mdb-card-title>
                     <h4>{{ 'PYTHONCOURSES.QUESTIONS.TITLE' | translate }}</h4>
                 </mdb-card-title>
-    
+
                 <!--Text-->
-                <mdb-card-text>{{ 'PYTHONCOURSES.QUESTIONS.TEXT' | translate }}<a href="https://www.reddit.com/r/CursoDePythonITBA">https://www.reddit.com/r/CursoDePythonITBA</a></mdb-card-text>
-                
+                <mdb-card-text>{{ 'PYTHONCOURSES.QUESTIONS.TEXT' | translate }}<a
+                        href="https://www.reddit.com/r/CursoDePythonITBA">https://www.reddit.com/r/CursoDePythonITBA</a>
+                </mdb-card-text>
+
                 <mdb-card-text>{{ 'PYTHONCOURSES.QUESTIONS.TEXT_VIDEOS' | translate }}
                     <ul>
                         <li>
-                            <a href="https://www.youtube.com/watch?v=Hh_V3bCHgrM" > Q/A {{ 'PYTHONCOURSES.CLASSES.TITLE' | translate }} 1 </a>
+                            <a href="https://www.youtube.com/watch?v=Hh_V3bCHgrM"> Q/A
+                                {{ 'PYTHONCOURSES.CLASSES.TITLE' | translate }} 1 </a>
                         </li>
                         <li>
-                            <a href="https://www.youtube.com/watch?v=8Vzn4eo6g4o" > Q/A {{ 'PYTHONCOURSES.CLASSES.TITLE' | translate }} 2 </a>
+                            <a href="https://www.youtube.com/watch?v=8Vzn4eo6g4o"> Q/A
+                                {{ 'PYTHONCOURSES.CLASSES.TITLE' | translate }} 2 </a>
                         </li>
                         <li>
-                            <a href="https://www.youtube.com/watch?v=ePkmka2JAVc" > Q/A {{ 'PYTHONCOURSES.CLASSES.TITLE' | translate }} 3 </a>
+                            <a href="https://www.youtube.com/watch?v=ePkmka2JAVc"> Q/A
+                                {{ 'PYTHONCOURSES.CLASSES.TITLE' | translate }} 3 </a>
                         </li>
                         <li>
-                            <a href="https://www.youtube.com/watch?v=a6np_39os4w" > Q/A {{ 'PYTHONCOURSES.CLASSES.TITLE' | translate }} 4 </a>
+                            <a href="https://www.youtube.com/watch?v=a6np_39os4w"> Q/A
+                                {{ 'PYTHONCOURSES.CLASSES.TITLE' | translate }} 4 </a>
                         </li>
                     </ul>
                 </mdb-card-text>
@@ -147,4 +154,5 @@
 
 </body>
 <app-footer></app-footer>
+
 </html>
